// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Switch Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<styled.div>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <styled.label>
    <styled.input
      aria-checked={true}
      aria-readonly={false}
      checked={true}
      disabled={false}
      id="jest-auto-snapshots String Fixture"
      onChange={[MockFunction]}
      role="switch"
      type="checkbox"
    />
    <styled.span
      aria-hidden="true"
    />
  </styled.label>
</styled.div>
`;

exports[`jest-auto-snapshots > Switch Matches snapshot when boolean prop "isOn" is set to: "false" 1`] = `
<styled.div>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <styled.label>
    <styled.input
      aria-checked={false}
      aria-readonly={true}
      checked={false}
      disabled={true}
      id="jest-auto-snapshots String Fixture"
      onChange={[MockFunction]}
      role="switch"
      type="checkbox"
    />
    <styled.span
      aria-hidden="true"
    />
  </styled.label>
</styled.div>
`;

exports[`jest-auto-snapshots > Switch Matches snapshot when passed all props 1`] = `
<styled.div>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <styled.label>
    <styled.input
      aria-checked={true}
      aria-readonly={true}
      checked={true}
      disabled={true}
      id="jest-auto-snapshots String Fixture"
      onChange={[MockFunction]}
      role="switch"
      type="checkbox"
    />
    <styled.span
      aria-hidden="true"
    />
  </styled.label>
</styled.div>
`;

exports[`jest-auto-snapshots > Switch Matches snapshot when passed only required props 1`] = `
<styled.div>
  <Text
    color="grayDarker"
    hasError={false}
    htmlFor="jest-auto-snapshots String Fixture"
    type="label"
  >
    jest-auto-snapshots String Fixture
  </Text>
  <styled.label>
    <styled.input
      aria-checked={false}
      aria-readonly={false}
      checked={false}
      disabled={false}
      id="jest-auto-snapshots String Fixture"
      onChange={[MockFunction]}
      role="switch"
      type="checkbox"
    />
    <styled.span
      aria-hidden="true"
    />
  </styled.label>
</styled.div>
`;
